# cert_installer

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
certs/: ca.cnf  ca_cert.der  ca_key.der
src/: main.rs
