[package]
name = "cert_installer"
version = "0.1.0"
authors = ["Terry Chia <terry@ayrx.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
hex = "0.4.3"
md-5 = "0.10.1"
x509-parser = "0.13.0"

[build-dependencies]
hex = "0.4.3"
md-5 = "0.10.1"
x509-parser = "0.13.0"

[profile.release]
strip = true
opt-level ="z"
lto = true
codegen-units = 1
panic = "abort"
